--- a/src/page_modules/appointmentType/AppointmentType.scss
+++ b/src/page_modules/appointmentType/AppointmentType.scss
@@ -22,6 +22,7 @@
         .first-step-card{
             text-align: center;
             min-height: 250px;
+            margin: auto;
     
             h3{
             color: $secondaryColor;
