--- a/src/page_modules/appointments/ConfirmAppointmentPage/ConfirmAppointmentPage.css
+++ b/src/page_modules/appointments/ConfirmAppointmentPage/ConfirmAppointmentPage.css
@@ -1,23 +1,29 @@
 .wrapper-general h2 {
   color: #808080;
   margin: 0px 0px 15px 0px; }
+  @media (min-width: 1080px) {
+    .wrapper-general h2 {
+      font-size: 1rem; } }
 
-.wrapper-general .appointment-summary {
+@media (min-width: 1280px) {
+  .wrapper-general .flex-responsive {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 40px; } }
+
+.wrapper-general .flex-responsive .appointment-summary {
   padding: 30px 0px 25px 0px; }
-  .wrapper-general .appointment-summary .card-container {
+  @media (min-width: 1280px) {
+    .wrapper-general .flex-responsive .appointment-summary {
+      width: 37%;
+      padding: 0px; } }
+  .wrapper-general .flex-responsive .appointment-summary .card-container {
     flex-direction: column; }
-    .wrapper-general .appointment-summary .card-container h3 {
-      color: #808080;
-      text-align: center;
-      margin: 0px;
-      font-size: 1rem; }
-    .wrapper-general .appointment-summary .card-container .summary-icon {
-      padding-top: 23px;
-      display: flex;
-      justify-content: space-between;
-      text-align: center; }
-      .wrapper-general .appointment-summary .card-container .summary-icon p {
-        color: #808080;
-        margin: 0px;
-        padding-top: 5px;
-        font-weight: 300; }
+
+@media (min-width: 1280px) {
+  .wrapper-general .flex-responsive .wrapper-form {
+    width: 60%; } }
+
+@media (min-width: 1280px) {
+  .wrapper-general .flex-responsive .wrapper-form .main-btn {
+    width: 60%; } }
