--- a/src/shared_modules/Button/Button.css
+++ b/src/shared_modules/Button/Button.css
@@ -11,7 +11,7 @@
   border: 1.7px solid #FF9900;
   border-radius: 50px;
   cursor: pointer;
-  margin-top: 30px;
+  margin: 30px 0px;
   text-transform: uppercase;
   transition: all 300ms ease-in-out; }
   .main-btn:hover {
@@ -30,7 +30,7 @@
       font-size: 0.8rem; } }
   @media (min-width: 1280px) {
     .main-btn {
-      width: 65%; } }
+      width: 50%; } }
   .main-btn.back-button {
     position: relative;
     font-size: 1rem;
@@ -40,7 +40,7 @@
     text-transform: initial;
     box-sizing: border-box;
     padding: 10px 25px 10px 36px;
-    margin-top: 0px; }
+    margin: 0px; }
     .main-btn.back-button:hover {
       background-color: #FF9900;
       color: white; }
