--- a/src/shared_modules/Calendar/CalendarHour/CalendarHour.css
+++ b/src/shared_modules/Calendar/CalendarHour/CalendarHour.css
@@ -1,11 +1,23 @@
 .hours-container {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap; }
+  width: 90%;
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  padding-bottom: 20px; }
   .hours-container .hour-item {
-    border: 1px solid #00619e;
-    border-radius: 5px;
-    padding: 12px;
-    margin: 10px; }
+    background-color: #F9F9F9;
+    border-radius: 10px;
+    padding: 15px;
+    margin: 0px 10px 10px 0px;
+    text-align: center;
+    color: #808080;
+    font-weight: 800;
+    font-size: 0.9rem; }
+    @media (min-width: 1280px) {
+      .hours-container .hour-item {
+        font-size: 0.7rem; } }
+    .hours-container .hour-item.select-hour {
+      border: 1px solid #00619e;
+      color: #00619e; }
     .hours-container .hour-item:hover {
       cursor: pointer; }
