--- a/src/shared_modules/Calendar/CalendarHour/CalendarHour.scss
+++ b/src/shared_modules/Calendar/CalendarHour/CalendarHour.scss
@@ -1,15 +1,33 @@
 @import "../../../styles/partials/variables";
+@import "../../../styles/partials/mixins";
 
 
 .hours-container{
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
+    width: 90%;
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    padding-bottom: 20px;
+
     .hour-item{
+        background-color: #F9F9F9;
+        border-radius: 10px;
+        padding: 15px; 
+        margin: 0px 10px 10px 0px;
+        text-align: center;
+        color: $texto;
+        font-weight: 800;
+        font-size: 0.9rem;
+
+           @include desktop-medium{
+           font-size: 0.7rem;
+           }
+
+        &.select-hour{
         border: 1px solid $secondaryColor;
-        border-radius: 5px;
-        padding: 12px; 
-        margin: 10px;
+        color: $secondaryColor;
+        }
+
         &:hover{
             cursor: pointer;
         }
