SetHuecos config ready to be tested

--- a/src/page_modules/appointments/CalendarAppointmentPage/CalendarAppointmentPage.css
+++ b/src/page_modules/appointments/CalendarAppointmentPage/CalendarAppointmentPage.css
@@ -1,2 +1,5 @@
+.calendar-appointment-page .button-container {
+  padding: 20px; }
+
 .calendar-appointment-page .card-container {
   padding: 0px; }
