--- a/src/page_modules/appointments/CalendarAppointmentPage/CalendarAppointmentPage.scss
+++ b/src/page_modules/appointments/CalendarAppointmentPage/CalendarAppointmentPage.scss
@@ -2,7 +2,9 @@
 @import "../../../styles/partials/mixins";
 
 .calendar-appointment-page{
-
+     .button-container{
+          padding: 20px;
+     }
      .card-container{
       padding:0px;
      }
