--- a/src/page_modules/appointments/ThankAppointmentPage/ThankAppointmentPage.css
+++ b/src/page_modules/appointments/ThankAppointmentPage/ThankAppointmentPage.css
@@ -44,6 +44,9 @@
   .wrapper-general .flex-desktop .appointment-summary {
     width: 40%; } }
 
+.wrapper-general .flex-desktop .appointment-summary h3 {
+  text-align: center; }
+
 @media (min-width: 1280px) {
   .wrapper-general .flex-desktop .wrapper-instructions {
     width: 55%; } }
