--- a/src/page_modules/appointments/ThankAppointmentPage/ThankAppointmentPage.scss
+++ b/src/page_modules/appointments/ThankAppointmentPage/ThankAppointmentPage.scss
@@ -29,7 +29,6 @@
         margin: 0;
         font-size: 1.1rem;
         margin-top: 10px;
-
         @include desktop-small {
           font-size: 1rem;
         }
@@ -65,6 +64,10 @@
        
         @include desktop-medium{
         width: 40%;
+        }
+
+        h3{
+          text-align: center;
         }
     }
 
