--- a/src/shared_modules/Calendar/CalendarHour/CalendarHour.css
+++ b/src/shared_modules/Calendar/CalendarHour/CalendarHour.css
@@ -5,7 +5,7 @@
   grid-template-columns: repeat(3, 1fr);
   padding-bottom: 20px; }
   .hours-container .hour-item {
-    background-color: #F9F9F9;
+    background-color: #f9f9f9;
     border-radius: 10px;
     padding: 15px;
     margin: 0px 10px 10px 0px;
@@ -16,8 +16,8 @@
     @media (min-width: 1280px) {
       .hours-container .hour-item {
         font-size: 0.7rem; } }
-    .hours-container .hour-item.select-hour {
-      border: 1px solid #00619e;
-      color: #00619e; }
     .hours-container .hour-item:hover {
       cursor: pointer; }
+  .hours-container .select-hour {
+    border: 1px solid #00619e;
+    color: #00619e; }
