--- a/src/page_modules/appointments/CalendarAppointmentPage/CalendarAppointmentPage.css
+++ b/src/page_modules/appointments/CalendarAppointmentPage/CalendarAppointmentPage.css
@@ -1,5 +1,7 @@
 .calendar-appointment-page .button-container {
   padding: 20px; }
+  .calendar-appointment-page .button-container .redirect-options {
+    margin-bottom: 12px; }
 
 .calendar-appointment-page .card-container {
   padding: 0px; }
