--- a/src/page_modules/appointments/CalendarAppointmentPage/CalendarAppointmentPage.scss
+++ b/src/page_modules/appointments/CalendarAppointmentPage/CalendarAppointmentPage.scss
@@ -4,6 +4,10 @@
 .calendar-appointment-page{
      .button-container{
           padding: 20px;
+          .redirect-options{
+               margin-bottom: 12px;
+          }
+         
      }
      .card-container{
       padding:0px;
