Calendar functionality completed. Undefined values handled

--- a/src/shared_modules/Button/Button.scss
+++ b/src/shared_modules/Button/Button.scss
@@ -44,6 +44,10 @@
     width: 50%;
     }
 
+    &.secondary-btn{
+       background-color: transparent;
+    }
+
     &.back-button {
         position: relative;
         font-size: 1rem;
@@ -114,5 +118,9 @@
       }
 
    }
+
+}
+
+.secondary-btn{
 
 }
