--- a/src/shared_modules/Button/Button.css
+++ b/src/shared_modules/Button/Button.css
@@ -31,6 +31,8 @@
   @media (min-width: 1280px) {
     .main-btn {
       width: 50%; } }
+  .main-btn.secondary-btn {
+    background-color: transparent; }
   .main-btn.back-button {
     position: relative;
     font-size: 1rem;
