--- a/src/page_modules/appointments/ThankAppointmentPage/ThankAppointmentPage.scss
+++ b/src/page_modules/appointments/ThankAppointmentPage/ThankAppointmentPage.scss
@@ -61,6 +61,7 @@
     }
     
     .appointment-summary{
+      margin: 20px 0px;
        
         @include desktop-medium{
         width: 40%;
@@ -68,6 +69,14 @@
 
         h3{
           text-align: center;
+          font-size: 0.9rem;
+          color: $texto;
+          margin: 0;
+
+          @include desktop-medium{
+            font-size: 0.9rem;
+            line-height: 20px;
+         }
         }
     }
 
