--- a/src/page_modules/appointments/CalendarAppointmentPage/CalendarAppointmentPage.css
+++ b/src/page_modules/appointments/CalendarAppointmentPage/CalendarAppointmentPage.css
@@ -1,7 +1,38 @@
-.calendar-appointment-page .button-container {
-  padding: 20px; }
-  .calendar-appointment-page .button-container .redirect-options {
-    margin-bottom: 12px; }
+.calendar-appointment-page .card-container {
+  margin-bottom: 20px; }
+  .calendar-appointment-page .card-container .button-container {
+    padding: 20px; }
+    .calendar-appointment-page .card-container .button-container .redirect-options {
+      margin-bottom: 12px; }
+    .calendar-appointment-page .card-container .button-container .card {
+      min-height: 55px; }
+      .calendar-appointment-page .card-container .button-container .card:nth-child(1) {
+        margin-bottom: 10px; }
+      .calendar-appointment-page .card-container .button-container .card label {
+        color: #808080;
+        font-weight: bold;
+        position: relative;
+        width: 100%;
+        display: flex;
+        align-items: center; }
+        @media (min-width: 1080px) {
+          .calendar-appointment-page .card-container .button-container .card label {
+            font-size: 0.8rem; } }
+        .calendar-appointment-page .card-container .button-container .card label strong {
+          font-weight: 300;
+          position: absolute;
+          right: 0; }
+        .calendar-appointment-page .card-container .button-container .card label img {
+          max-width: 40px;
+          margin-right: 10px; }
+      .calendar-appointment-page .card-container .button-container .card input {
+        margin-right: 10px; }
+    .calendar-appointment-page .card-container .button-container .card-highlighted label {
+      color: white;
+      font-weight: bold; }
 
 .calendar-appointment-page .card-container {
   padding: 0px; }
+
+input[type="radio" i] {
+  background-color: red; }
