--- a/src/page_modules/appointments/ConfirmAppointmentPage/ConfirmAppointmentPage.css
+++ b/src/page_modules/appointments/ConfirmAppointmentPage/ConfirmAppointmentPage.css
@@ -19,6 +19,15 @@
       padding: 0px; } }
   .wrapper-general .flex-responsive .appointment-summary .card-container {
     flex-direction: column; }
+    .wrapper-general .flex-responsive .appointment-summary .card-container h3 {
+      color: #808080;
+      text-align: center;
+      font-size: 1rem;
+      margin: 0; }
+      @media (min-width: 1280px) {
+        .wrapper-general .flex-responsive .appointment-summary .card-container h3 {
+          font-size: 0.9rem;
+          line-height: 20px; } }
 
 @media (min-width: 1280px) {
   .wrapper-general .flex-responsive .wrapper-form {
