--- a/src/page_modules/appointments/ThankAppointmentPage/ThankAppointmentPage.css
+++ b/src/page_modules/appointments/ThankAppointmentPage/ThankAppointmentPage.css
@@ -40,12 +40,20 @@
     justify-content: space-between;
     padding-top: 30px; } }
 
-@media (min-width: 1280px) {
-  .wrapper-general .flex-desktop .appointment-summary {
-    width: 40%; } }
-
-.wrapper-general .flex-desktop .appointment-summary h3 {
-  text-align: center; }
+.wrapper-general .flex-desktop .appointment-summary {
+  margin: 20px 0px; }
+  @media (min-width: 1280px) {
+    .wrapper-general .flex-desktop .appointment-summary {
+      width: 40%; } }
+  .wrapper-general .flex-desktop .appointment-summary h3 {
+    text-align: center;
+    font-size: 0.9rem;
+    color: #808080;
+    margin: 0; }
+    @media (min-width: 1280px) {
+      .wrapper-general .flex-desktop .appointment-summary h3 {
+        font-size: 0.9rem;
+        line-height: 20px; } }
 
 @media (min-width: 1280px) {
   .wrapper-general .flex-desktop .wrapper-instructions {
