--- a/src/shared_modules/Calendar/CalendarHour/CalendarHour.scss
+++ b/src/shared_modules/Calendar/CalendarHour/CalendarHour.scss
@@ -18,7 +18,7 @@
 		font-weight: 800;
 		font-size: 0.9rem;
 
-		@include desktop-medium {
+		@include desktop-small {
 			font-size: 0.7rem;
 		}
 
