--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,117 +1,117 @@
 @import "./partials/fonts";
 @import "./partials/variables";
 @import "./partials/mixins";
-@import "./partials/placeholders"; 
-
+@import "./partials/placeholders";
 
 /////////////////////////////
 /////*****RESET*****////
 /////////////////////////////
 body {
-	margin: 0px;
-	padding: 0px;
+  margin: 0px;
+  padding: 0px;
 }
 
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 a {
-	text-decoration: none;
+  text-decoration: none;
 }
 
 ul {
-	list-style-type: none;
-	padding: 0px;
+  list-style-type: none;
+  padding: 0px;
 }
 /////////
-
 
 /////////////////////////////
 /////*****MAIN LAYOUT*****////
 /////////////////////////////
 html {
-	font-size: 15px;
+  font-size: 15px;
 
-	@include desktop-small {
-		font-size: 20px;
-	}
+  @include desktop-small {
+    font-size: 20px;
+  }
 }
-
 
 body {
-	background: lighten($primaryColorBg,12%);
-    background-image: url(../assets/images/icons/background-body.svg);
-    background-repeat: no-repeat;
-    background-size: 360px;
-	background-position-y: 500px;
-    background-position-x: right;
-	font-family: $primaryFont;
-	font-size: 1rem;
-	color: lighten($dark,80%);
+  background: lighten($primaryColorBg, 12%);
+  background-image: url(../assets/images/icons/background-body.svg);
+  background-repeat: no-repeat;
+  background-size: 360px;
+  background-position-y: 500px;
+  background-position-x: right;
+  font-family: $primaryFont;
+  font-size: 1rem;
+  color: lighten($dark, 80%);
 
-	@include tablet-medium{
-	background-size: 500px;
-	}
+  @include tablet-medium {
+    background-size: 500px;
+  }
 
-	@include desktop-large{
-	background-size: 700px;
-	}
+  @include desktop-large {
+    background-size: 700px;
+  }
 
-	.wrapper-general{
-     max-width: 87%;
-	 margin: auto;
-	   
-			@include tablet-medium{
-			max-width: 70%;
-			}
-	   
-			@include tablet-large{
-			max-width: 60%;
-			}
+  .wrapper-general {
+    max-width: 87%;
+    margin: auto;
 
-		   @include desktop-large{
-			max-width: 55%;
-		   }
+    @include tablet-medium {
+      max-width: 70%;
+    }
 
-		h1{
-		font-size:1.6rem;
-		color: $texto ;
-		margin: 30px 0px 10px 0px;
+    @include desktop-small {
+      max-width: 55%;
+    }
 
-		@include desktop-small{
-		font-size: 1.3rem;
-		}
-		}
+    @include desktop-medium-steppers {
+      max-width: 45%;
+    }
 
-	}
+    h1 {
+      font-size: 1.6rem;
+      color: $texto;
+      margin: 30px 0px 10px 0px;
+
+      @include desktop-small {
+        font-size: 1.3rem;
+      }
+    }
+  }
 }
 
-.container-button{
- display: flex;
- justify-content: center;
+.container-button {
+  display: flex;
+  justify-content: center;
 }
 
-.card-container{
+.card-container {
+  .summary-icon {
+    padding-top: 23px;
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
 
-	.summary-icon{
-		padding-top: 23px;
-		display: flex;
-		justify-content: space-around;
-		text-align: center;
-	
-		  p{
-		  color: $texto;
-		  margin: 0px;
-		  padding-top: 5px;
-		  font-weight: 300;
-		  font-size: .9rem;
-	
-			 @include desktop-small{
-			 font-size: .7rem;
-			 }
-		  }
-	   }
+    p {
+      color: $texto;
+      margin: 0px;
+      padding-top: 5px;
+      font-weight: 300;
+      font-size: 0.9rem;
 
+      @include desktop-small {
+        font-size: 0.7rem;
+      }
+    }
+  }
 }
 
+.change-width{
+
+  @include desktop-medium-steppers {
+     max-width: 65% !important;
+  }
+}
